---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"\", \"one\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
---
error: Invalid Nix module
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external Nix implementation but the module path
`` is not valid.
